third_party/rust/chromium_crates_io/vendor/quote-1.0.33/tests/ui/not-repeatable.stderr
error[E0599]: the method `quote_into_iter` exists for struct `Ipv4Addr`, but its trait bounds were not satisfied
 --> tests/ui/not-repeatable.rs:7:13
  |
3 | struct Ipv4Addr;
  | ---------------
  | |
  | method `quote_into_iter` not found for this struct
  | doesn't satisfy `Ipv4Addr: Iterator`
  | doesn't satisfy `Ipv4Addr: ToTokens`
  | doesn't satisfy `Ipv4Addr: ext::RepIteratorExt`
  | doesn't satisfy `Ipv4Addr: ext::RepToTokensExt`
...
7 |     let _ = quote! { #(#ip)* };
  |             ^^^^^^^^^^^^^^^^^^ method cannot be called on `Ipv4Addr` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Ipv4Addr: Iterator`
          which is required by `Ipv4Addr: ext::RepIteratorExt`
          `&Ipv4Addr: Iterator`
          which is required by `&Ipv4Addr: ext::RepIteratorExt`
          `Ipv4Addr: ToTokens`
          which is required by `Ipv4Addr: ext::RepToTokensExt`
          `&mut Ipv4Addr: Iterator`
          which is required by `&mut Ipv4Addr: ext::RepIteratorExt`
note: the traits `ToTokens` and `Iterator` must be implemented
 --> src/to_tokens.rs
  |
  | pub trait ToTokens {
  | ^^^^^^^^^^^^^^^^^^
  |
 ::: $RUST/core/src/iter/traits/iterator.rs
  |
  | pub trait Iterator {
  | ^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::quote_bind_into_iter` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
